# OSPSuite.SimModel.Solver.CVODES

./: .cproject  .gitignore  .gitmodules  .project  OSPSuite.SimModelSolver.CVODES.sln  README.md  appveyor.yml  buildLinux.sh
.github/workflows/: cmake.yml  test_centos7.yml
src/CVODES/: .cproject  .project  CVODES.vcproj  CVODES.vcxproj  CVODES.vcxproj.filters
src/OSPSuite.SimModelSolver_CVODES/: CMakeLists.txt  OSPSuite.SimModelSolver_CVODES.nuspec  OSPSuite.SimModelSolver_CVODES_CentOS7.nuspec  OSPSuite.SimModelSolver_CVODES_Ubuntu18.nuspec  SimModelSolver_CVODES.rc  SimModelSolver_CVODES.vcxproj  SimModelSolver_CVODES.vcxproj.filters  resource.h  version.h
src/OSPSuite.SimModelSolver_CVODES/include/SimModelSolver_CVODES/: SimModelSolver_CVODES.h
src/OSPSuite.SimModelSolver_CVODES/src/: SimModelSolver_CVODES.cpp
tests/OSPSuite.SimModelSolver_CVODES.Tests/: SimModelSolver_CVODES.Specs.vcxproj  SimModelSolver_CVODES.Specs.vcxproj.filters
tests/OSPSuite.SimModelSolver_CVODES.Tests/Src/: ExceptionHelper.cpp  SolverSpecs.cpp
tests/OSPSuite.SimModelSolver_CVODES2.8.2.Tests/: SimModelSolver_CVODES2.8.2.Specs.vcxproj  SimModelSolver_CVODES2_8_2.Specs.vcxproj.filters
tests/OSPSuite.SimModelSolver_CVODES2.8.2.Tests/Src/: ExceptionHelper.cpp  SolverSpecs.cpp
tests/TestCVODES/: TestCVODES.sln  TestCVODES.vcxproj  TestCVODES.vcxproj.filters
tests/TestCVODES/Include/: HelpFunctions.h
tests/TestCVODES/Src/: HelpFunctions.cpp  TestCVODE_TestSystemSimple.cpp  TestCVODE_cvsRoberts_FSA.cpp  TestCVODE_cvsRoberts_FSA_without_Sensitivity.cpp
(+3 files in other folders)
